--- a/index.html
+++ b/index.html
@@ -1,51 +1,72 @@
 <!DOCTYPE html>
-<html lang="en">
+
 <head>
-
-  <!-- Basic Page Needs
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <meta charset="utf-8">
-  <title>mnml</title>
-  <meta name="description" content="">
-  <meta name="author" content="">
-
-  <!-- Mobile Specific Metas
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <!-- FONT
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
-
-  <!-- CSS
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" href="css/mnml.css">
-
-  <!-- Favicon
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="images/favicon.png">
-
+    <html lang="en-US">
+    <meta charset="utf-8">
+    <title>mnml</title>
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="css/mnml.css">
+    <link rel="icon" type="image/png" href="images/favicon.png">
 </head>
+
 <body>
-
-  <!-- Primary Page Layout
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <wrapper>
-  	<div class="container">
-  <div class="row">
-    <div class="col-1-2 red">hello</div>
-    <div class="col-1-2 orange">hello</div>
-    <div class="col-1-2 yellow">hello</div>
-    <div class="col-1-2 green">hello</div>
-    <div class="col-1-2 cyan">hello</div>
-    <div class="col-1-2 blue">hello</div>
-    <div class="col-1-2 purple">hello</div>
-    <div class="col-1-2 pink">hello</div>
-  </div>
-</div>
-</wrapper>
-
-<!-- End Document
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <wrapper>
+        <div class="container">
+            <div class="row">
+                <div class="half column red">red</div>
+                <div class="half column orange">orange</div>
+                <div class="half column pink">pink</div>
+                <div class="half column yellow">yellow</div>
+                <div class="half column purple">purple</div>
+                <div class="half column green">pink</div>
+                <div class="half column blue">blue</div>
+                <div class="half column cyan">cyan</div>
+            </div>
+            <div class="row">
+                <div class="column white center">full column</div>
+                <div class="three-quarters column white center">three-fourths column</div>
+                <div class="two-thirds column white center">two-thirds column</div>
+                <div class="half column white center">half column</div>
+                <div class="half column black center"></div>
+                <div class="one-third column white center">one-third column</div>
+                <div class="two-thirds spacer center"></div>
+                <div class="quarter column white center">quarter column</div>
+            </div>
+            <hr></hr>
+            <div class="row">
+                <div class="column">
+                    <h1>heading 1</h1>
+                    <h2>heading 2</h2>
+                    <h3>heading 3</h3>
+                    <h4>heading 4</h4>
+                    <h5>heading 5</h5>
+                    <p>text</p>
+                    <a href="#">link</a>
+                </div>
+            </div>
+            <div class="column">
+                <ul> unordered List
+                    <li>item a</li>
+                    <li>item b</li>
+                    <ul>nested unordered list
+                        <li>item c</li>
+                    </ul>
+                </ul>
+            </div>
+            <div class="cloumn">
+                <ol> ordered List
+                    <li>item a</li>
+                    <li>item b</li>
+                    <ol>nested ordered list
+                        <li>item c</li>
+                    </ol>
+                </ol>
+            </div>
+        </div>
+    </wrapper>
 </body>
+
 </html>
