adding more shit

--- a/index.html
+++ b/index.html
@@ -16,25 +16,26 @@
     <wrapper>
         <div class="container">
             <div class="row">
-                <div class="half column red">red</div>
-                <div class="half column orange">orange</div>
-                <div class="half column pink">pink</div>
-                <div class="half column yellow">yellow</div>
-                <div class="half column purple">purple</div>
-                <div class="half column green">pink</div>
-                <div class="half column blue">blue</div>
-                <div class="half column cyan">cyan</div>
+                <div class="column white center-align">full column</div>
+                <div class="three-quarters column white center-align">three-fourths column</div>
+                <div class="two-thirds column white center-align">two-thirds column</div>
+                <div class="half column white center-align">half column</div>
+                <div class="half column black center-align"></div>
+                <div class="one-third column white center-align">one-third column</div>
+                <div class="two-thirds spacer center-align"></div>
+                <div class="quarter column white center-align">quarter column</div>
             </div>
             <div class="row">
-                <div class="column white center">full column</div>
-                <div class="three-quarters column white center">three-fourths column</div>
-                <div class="two-thirds column white center">two-thirds column</div>
-                <div class="half column white center">half column</div>
-                <div class="half column black center"></div>
-                <div class="one-third column white center">one-third column</div>
-                <div class="two-thirds spacer center"></div>
-                <div class="quarter column white center">quarter column</div>
+                <div class="half column red vertical-align center-align">red</div>
+                <div class="half column orange center-align">orange</div>
+                <div class="half column pink center-align">pink</div>
+                <div class="half column yellow center-align">yellow</div>
+                <div class="half column purple center-align">purple</div>
+                <div class="half column green center-align">pink</div>
+                <div class="half column blue center-align">blue</div>
+                <div class="half column cyan center-align">cyan</div>
             </div>
+
             <hr></hr>
             <div class="row">
                 <div class="column">
@@ -45,9 +46,6 @@
                     <h5>heading 5</h5>
                     <p>text</p>
                     <a href="#">link</a>
-                </div>
-            </div>
-            <div class="column">
                 <ul> unordered List
                     <li>item a</li>
                     <li>item b</li>
@@ -55,9 +53,7 @@
                         <li>item c</li>
                     </ul>
                 </ul>
-            </div>
-            <div class="cloumn">
-                <ol> ordered List
+                <ol> ordered list
                     <li>item a</li>
                     <li>item b</li>
                     <ol>nested ordered list
