--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
 </head>
 
 <body>
-    <wrapper>
+    <nav class="navigation">
+        <h1>hello</h1>
+    </nav>
+    <div class="wrapper">
+
         <div class="container">
             <div class="row">
                 <div class="column white center-align">full column</div>
@@ -22,11 +26,11 @@
                 <div class="half column white center-align">half column</div>
                 <div class="half column black center-align"></div>
                 <div class="one-third column white center-align">one-third column</div>
-                <div class="two-thirds spacer center-align"></div>
+                <div class="two-thirds spacer"></div>
                 <div class="quarter column white center-align">quarter column</div>
             </div>
             <div class="row">
-                <div class="half column red vertical-align center-align">red</div>
+                <div class="half column red center-align">red</div>
                 <div class="half column orange center-align">orange</div>
                 <div class="half column pink center-align">pink</div>
                 <div class="half column yellow center-align">yellow</div>
@@ -46,23 +50,23 @@
                     <h5>heading 5</h5>
                     <p>text</p>
                     <a href="#">link</a>
-                <ul> unordered List
-                    <li>item a</li>
-                    <li>item b</li>
-                    <ul>nested unordered list
-                        <li>item c</li>
+                    <ul> unordered List
+                        <li>item a</li>
+                        <li>item b</li>
+                        <ul>nested unordered list
+                            <li>item c</li>
+                        </ul>
                     </ul>
-                </ul>
-                <ol> ordered list
-                    <li>item a</li>
-                    <li>item b</li>
-                    <ol>nested ordered list
-                        <li>item c</li>
+                    <ol> ordered list
+                        <li>item a</li>
+                        <li>item b</li>
+                        <ol>nested ordered list
+                            <li>item c</li>
+                        </ol>
                     </ol>
-                </ol>
+                </div>
             </div>
         </div>
-    </wrapper>
 </body>
 
 </html>
