--- a/index.html
+++ b/index.html
@@ -14,30 +14,38 @@
 
 <body>
     <nav class="navigation">
-        <h1>hello</h1>
+        <section class="container">
+            <div class="navigation-title">
+                hello
+            </div>
+            <ul class="navigation-list right-align">
+                <li class="navigation-item">item a</li>
+                <li class="navigation-item">item b</li>
+            </ul>
+        </section>
     </nav>
     <div class="wrapper">
 
         <div class="container">
             <div class="row">
-                <div class="column white center-align">full column</div>
-                <div class="three-quarters column white center-align">three-fourths column</div>
-                <div class="two-thirds column white center-align">two-thirds column</div>
-                <div class="half column white center-align">half column</div>
-                <div class="half column black center-align"></div>
-                <div class="one-third column white center-align">one-third column</div>
+                <div class="column black center">full column</div>
+                <div class="three-quarters column black center">three-fourths column</div>
+                <div class="two-thirds column black center">two-thirds column</div>
+                <div class="half column black center">half column</div>
+                <div class="half spacer center"></div>
+                <div class="one-third column black center">one-third column</div>
                 <div class="two-thirds spacer"></div>
-                <div class="quarter column white center-align">quarter column</div>
+                <div class="quarter column black center">quarter column</div>
             </div>
             <div class="row">
-                <div class="half column red center-align">red</div>
-                <div class="half column orange center-align">orange</div>
-                <div class="half column pink center-align">pink</div>
-                <div class="half column yellow center-align">yellow</div>
-                <div class="half column purple center-align">purple</div>
-                <div class="half column green center-align">pink</div>
-                <div class="half column blue center-align">blue</div>
-                <div class="half column cyan center-align">cyan</div>
+                <div class="column red center">red</div>
+                <div class="column orange center">orange</div>
+                <div class="column yellow center">yellow</div>
+                <div class="column green center">green</div>
+                <div class="column cyan center">cyan</div>
+                <div class="column blue center">blue</div>
+                <div class="column purple center">purple</div>
+                <div class="column pink center">pink</div>
             </div>
 
             <hr></hr>
@@ -67,6 +75,8 @@
                 </div>
             </div>
         </div>
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+            <script src="js/main.js"></script>
 </body>
 
 </html>
