--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="css/mnml.css">
     <link rel="icon" type="image/png" href="images/favicon.png">
 </head>
@@ -15,12 +14,9 @@
 <body>
     <nav class="navigation">
         <section class="container">
-            <div class="navigation-title">
-                hello
-            </div>
-            <ul class="navigation-list right-align">
-                <li class="navigation-item">item a</li>
-                <li class="navigation-item">item b</li>
+            <a class="navigation-title" href="#">MNML</a>
+            <ul class="navigation-list">
+                <a class="navigation-item" href="#">about</a>
             </ul>
         </section>
     </nav>
@@ -28,14 +24,14 @@
 
         <div class="container">
             <div class="row">
-                <div class="column black center">full column</div>
-                <div class="three-quarters column black center">three-fourths column</div>
-                <div class="two-thirds column black center">two-thirds column</div>
-                <div class="half column black center">half column</div>
+                <div class="column inverse center">full column</div>
+                <div class="three-quarters column inverse center">three-fourths column</div>
+                <div class="two-thirds column inverse center">two-thirds column</div>
+                <div class="half column inverse center">half column</div>
                 <div class="half spacer center"></div>
-                <div class="one-third column black center">one-third column</div>
+                <div class="one-third column inverse center">one-third column</div>
                 <div class="two-thirds spacer"></div>
-                <div class="quarter column black center">quarter column</div>
+                <div class="quarter column inverse center">quarter column</div>
             </div>
             <div class="row">
                 <div class="column red center">red</div>
@@ -58,6 +54,8 @@
                     <h5>heading 5</h5>
                     <p>text</p>
                     <a href="#">link</a>
+                    <br></br>
+                    <div class="button">button</div>
                     <ul> unordered List
                         <li>item a</li>
                         <li>item b</li>
@@ -75,8 +73,9 @@
                 </div>
             </div>
         </div>
-            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-            <script src="js/main.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="js/main.js"></script>
+    </div>
 </body>
 
 </html>
