adding more shit

--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <head>
     <html lang="en-US">
     <meta charset="utf-8">
@@ -10,15 +9,20 @@
     <link rel="stylesheet" href="css/mnml.css">
     <link rel="icon" type="image/png" href="images/favicon.png">
 </head>
-
 <body>
     <nav class="navigation">
-        <section class="container">
-            <a class="navigation-title" href="#">MNML</a>
-            <ul class="navigation-list">
-                <a class="navigation-item" href="#">about</a>
+        <div class="container">
+            <ul class="navigation-list left-align">
+                <li>
+                    <a class="navigation-item" href="#">MNML</a>
+                </li>
             </ul>
-        </section>
+            <ul class="navigation-list right-align">
+                <li>
+                    <a class="navigation-item" href="#">about</a>
+                </li>
+            </ul>
+        </div>
     </nav>
     <div class="wrapper">
 
@@ -43,7 +47,6 @@
                 <div class="column purple center">purple</div>
                 <div class="column pink center">pink</div>
             </div>
-
             <hr></hr>
             <div class="row">
                 <div class="column">
@@ -73,9 +76,17 @@
                 </div>
             </div>
         </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="js/main.js"></script>
     </div>
+    <div class="footer">
+        <div>
+            <div class="container">
+                Designed with ♥ by
+                <a href="https://github.com/RyenCook">ryencook</a>. Licensed under the
+                <a href="LICENSE">MIT License</a>.
+            </div>
+        </div>
+    </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="js/main.js"></script>
 </body>
-
 </html>
