beautiful 2: more beauty

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
         <div class="container">
             <ul class="navigation-list left-align">
                 <li>
-                    <a class="navigation-item" href="https://github.com/RyenCook/mnml">MNML</a>
+                    <a class="navigation-item" href="https://github.com/RyenCook/mnml">mnml</a>
                 </li>
             </ul>
             <ul class="navigation-list right-align">
                 <li>
-                    <a class="navigation-item" href="#">MENU</a>
+                    <a class="navigation-item" href="#">menu</a>
                 </li>
             </ul>
         </div>
