--- a/license.html
+++ b/license.html
@@ -49,40 +49,13 @@
     <section class="wrapper">
         <section class="container">
             <section class="row">
-                <section class="column inverse center-align">full column</section>
-                <section class="three-quarters column inverse center-align">three-fourths column</section>
-                <section class="two-thirds column inverse center-align">two-thirds column</section>
-                <section class="half column inverse center-align">half column</section>
-                <section class="half spacer">spacer?</section>
-                <section class="one-third column inverse center-align">one-third column</section>
-                <section class="two-thirds spacer">its invisible!</section>
-                <section class="quarter column inverse center-align">quarter column</section>
-            </section>
-            <section class="row">
-                <section class="column black">black</section>
-                <section class="column grey">grey</section>
-                <section class="column white">white</section>
-                <section class="column red">red</section>
-                <section class="column orange">orange</section>
-                <section class="column yellow">yellow</section>
-                <section class="column green">green</section>
-                <section class="column cyan">cyan</section>
-                <section class="column blue">blue</section>
-                <section class="column purple">purple</section>
-            </section>
-            <hr></hr>
-            <section class="row">
-                <section class="half column">
-                    <h1>heading 1</h1>
-                    <h2>heading 2</h2>
-                    <h3>heading 3</h3>
-                    <h4>heading 4</h4>
-                    <h5>heading 5</h5>
-                    <p>text</p>
-                    <a href="#">link</a>
-                    <br>
-                    <div class="button">button</div>
-                    <br>
+                <section class="column inverse center-align"><h3>THE MIT LICENSE (MIT)</h3></section>
+                <hr></hr>
+                <section class="column">
+                        <p>Copyright © 2018 <b>Ryan Cook</b> <<a href="#">ryencook@gmail.com</a>></p>
+                        <p>Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the “Software”), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:</p>
+                        <p>The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.</p>
+                        <p>THE SOFTWARE IS PROVIDED “AS IS”, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</p>
                 </section>
             </section>
         </section>
@@ -91,9 +64,10 @@
         <section class="container">
             Designed with ♥ by
             <a href="https://github.com/RyenCook">ryencook</a>. Licensed under the
-            <a href="license.html">MIT License</a>.
+            <a href="license.html">^</a>.
         </section>
     </section>
+
     <!-- CONTAINER -->
     <!-- HERO -->
     <!-- INTRODUCTION -->
