--- a/license.html
+++ b/license.html
@@ -3,12 +3,12 @@
 <head>
     <html lang="en-US">
     <meta charset="utf-8">
-    <title>hello friend.</title>
+    <title>mnml css framework</title>
     <meta name="description" content="">
     <meta name="author" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" type="image/png" href="images/favicon.png">
+    <link rel="shortcut icon" href="favicon.ico" />
 </head>
 
 <body>
