--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
                     <br>
                     <div class="button">button</div>
                     <br>
+                    <textarea>hello?</textarea>
                 </section>
             </section>
         </section>
